@@ -75,6 +75,10 @@ put_config_line --file ~/.profile --property 'PDSH_RCMD_TYPE' --value 'ssh' --pr
 # * set findbugs home
 put_config_line --file ~/.profile --property 'FINDBUGS_HOME' --value '/opt/findbugs-3.0.1' --prefix 'export'
 
+#
+# * set maven opts
+put_config_line --file ~/.profile --property 'MAVEN_OPTS' --value '-Xmx1024m -XX:MaxPermSize=128m' --prefix 'export'
+
 # ----------------------------
 # Clean and Upgrade libs:
 # apt-get -y upgrade
